refactoring tailwind styling with color variables + fixing spacing

--- a/isaca/src/app/globals.css
+++ b/isaca/src/app/globals.css
@@ -3,7 +3,7 @@
 :root {
   /* main */
   --background: #F2F2F7;
-  --text: #0C2A64;
+  --text: #333333;
 
   /* primary colors */
   --blue: #009ED8;
@@ -12,22 +12,40 @@
   --green: #3CA686;
 
   /* neutrals */
-  --light-gray: #D1D1D6;
+  --lighter-gray: #D1D1D6;
   --med-gray: #8E8E93;
   --off-white: #F2F2F7;
 
-  /* TODO: Add secondary colors */
+  /* secondary blues */
   --med-blue: #619DC5;
   --light-blue: #B0DAEA;
   --lightest-blue: #D4EAF1;
 
+  /* Fonts */
   --font-dm-sans: "DM Sans", sans-serif;
   --font-dm-mono: "DM Mono", sans-serif;
 }
 
+/* These theme variables can be used by inline Tailwind classes */
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+
+  --color-text-color: var(--text);
+
+  --color-blue: var(--blue);
+  --color-dark-blue: var(--dark-blue);
+  --color-navy-blue: var(--navy-blue);
+  --color-green: var(--green);
+
+  --color-med-gray: var(--med-gray);
+  --color-lighter-gray: var(--lighter-gray);
+  --color-off-whiet: var(--off-white);
+
+  --color-med-blue: var(--med-blue);
+  --color-light-blue: var(--light-blue);
+  --color-lightest-blue: var(--lightest-blue);
+
   --font-sans: var(--font-dm-sans);
   --font-mono: var(--font-dm-mono);
 }
@@ -40,6 +58,7 @@ body {
 
 h1, h2, h3, h4, h5 {
   font-family: var(font-mono);
+  color: var(--navy-blue);
 }
 
 h1 {
@@ -55,4 +74,8 @@ h2 {
 h3 {
   font-size: 1.5rem;
   font-weight: 400;
+}
+
+p {
+  color: var(--text);
 }
